--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -1,17 +1,17 @@
 <% content_for :head do -%>
   <script type="text/javascript">
-    var f = function() { document.getElementById("chime").play(); }
-    $(document).ready(function(){
-      while(true) {
-        setTimeout(f, 5000);
-      }
-    }
+    self.setInterval(function() {
+        if (navigator.userAgent.indexOf("Safari") > -1)
+            $('#chime')[0].load();
+        $('#chime')[0].currentTime = 0;
+        $('#chime')[0].play();
+    }, 5000)
   </script>
 <% end -%>
 
-<audio id="chime" preload>
-	<source src="<%= asset_path('japanese-temple-bell.mp3') %>" type="audio/mpeg" />
+<audio id="chime" preload="true">
+	<source src="<%= asset_path('japanese-temple-bell.mp3') %>" type="audio/mpeg"/>
 </audio>
 
-<h1>Demo</h1>
+<h1>Test</h1>
 <p>If this is working, you should hear a chime every five seconds!</p>
