--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -1,16 +1,15 @@
 <% content_for :head do -%>
   <script type="text/javascript">
     self.setInterval(function() {
-        if (navigator.userAgent.indexOf("Safari") > -1)
-            $('#chime')[0].load();
         $('#chime')[0].currentTime = 0;
         $('#chime')[0].play();
     }, 5000)
   </script>
 <% end -%>
 
-<audio id="chime" preload="true">
-	<source src="<%= asset_path('japanese-temple-bell.mp3') %>" type="audio/mpeg"/>
+<audio id="chime" preload>
+	<source src="japanese-temple-bell.mp3" type="audio/mpeg"/>
+    <source src="japanese-temple-bell.ogg" type="audio/ogg"/>
 </audio>
 
 <h1>Test</h1>
