--- a/app/views/conferences/show.html.erb
+++ b/app/views/conferences/show.html.erb
@@ -2,49 +2,44 @@
 
 <div class="well">
 	<legend>Time Zone</legend>
-	<%= form_for @conference, validate: true, html: {class: 'form-inline'} do |f| %>
+	<%= form_for @conference, validate: true do |f| %>
 		<%= f.select :time_zone, ActiveSupport::TimeZone::MAPPING.keys, style: 'text-align: right' %>
-		<%= f.submit 'Update Time Zone', class: 'btn btn-primary', style: 'float: right' %>
+		<%= f.submit 'Update', class: 'btn btn-primary', style: 'float: right' %>
 	<% end %>
 </div>
 
-<div class="well">
-	<legend>Rooms</legend>
-	<% if @conference.rooms.count > 0 %>
-	  <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th></th>
-					<th></th>
-					<th></th>
-        </tr>
-      </thead>
-	    <% @conference.rooms.sort_by { |c| c.name }.each do |room| %>
-	      <tr>
-	        <td style="width: 55%"><%= room.name %></td>
-	        <td style="width: 15%; text-align: right"><%= link_to 'Manage', room %></td>
-	        <td style="width: 15%; text-align: right"><%= link_to 'Clone', room %></td>
-	        <td style="width: 15%; text-align: right"><%= link_to 'Delete', room %></td>
-	      </tr>
-	    <% end %>
-	  </table>
-    <br/>
-	<% end %>
+<h2>Rooms</h2>
+<% if @conference.rooms.count > 0 %>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th></th>
+				<th></th>
+				<th></th>
+      </tr>
+    </thead>
+    <% @conference.rooms.sort_by { |c| c.name }.each do |room| %>
+      <tr>
+        <td style="width: 55%"><%= room.name %></td>
+        <td style="width: 15%; text-align: right"><%= link_to 'Manage', room %></td>
+        <td style="width: 15%; text-align: right"><%= link_to 'Clone', room %></td>
+        <td style="width: 15%; text-align: right"><%= link_to 'Delete', room %></td>
+      </tr>
+    <% end %>
+  </table>
+  <br/>
+<% end %>
 
-  <div class="panel panel-default" style="width: 50%; float: none; margin-left: auto; margin-right: auto">
-    <div class="panel-heading">New Room</div>
-    <div class="panel-body">
-      <%= form_for @room, validate: true, html: {class: 'form-horizontal'} do |f| %>
-      <fieldset>
-        <%= f.text_field :name, placeholder: ' room name', style: 'width: 75%' %>
-				<%= f.hidden_field :conference, value: @conference.id %>
-        <%= f.submit 'Create', class: 'btn btn-primary' %>
-      </fieldset>
-      <% end %>
-    </div>
+<div class="panel panel-default" style="width: 50%; float: none; margin-left: auto; margin-right: auto">
+  <div class="panel-heading">New Room</div>
+  <div class="panel-body">
+    <%= form_for @room, validate: true, html: {class: 'form-horizontal'} do |f| %>
+    <fieldset>
+      <%= f.text_field :name, placeholder: ' room name', style: 'width: 75%' %>
+			<%= f.hidden_field :conference, value: @conference.id %>
+      <%= f.submit 'Create', class: 'btn btn-primary' %>
+    </fieldset>
+    <% end %>
   </div>
-
 </div>
-
-
