--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -16,14 +16,23 @@
 
 <table>
 	<tr>
-	  <td style="width: 20%">
-			<table>
-				<%= @conference.event_types.each do |e| %>
+	  <td style="width: 20%; vertical-align: top">
+			<legend>Event Types</legend>
+			<% @room.conference.event_types.each do |e| %>
 
+			<% end %>
+			<div class="well">
+				<%= form_for @room.conference.event_types.create!, url: add_event_type_room_path(@room), validate: true do |f| %>
+					<%= f.text_field :name, style: 'text-align: left; width: 75%' %><br/>
+					<%= f.text_field :length, style: 'text-align: left; width: 75%' %><br/>
+					<%= f.text_field :warning_time, style: 'text-align: left; width: 75%' %><br/>
+					<%= f.text_field :passing_time, style: 'text-align: left; width: 75%' %><br/>
+					<%= f.submit 'Create', class: 'btn btn-primary btn-sm', style: 'float: right' %>
 				<% end %>
-			<table>
+		</div>
 		</td>
-	  <td style="width: 80%">
+		<td style="width: 5%"/>
+	  <td style="width: 75%">
 		  <div id="scheduler"></div>
 	  </td>
 	</tr>
