Continue implementing UI

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -21,13 +21,16 @@
 			<% @room.conference.event_types.each do |e| %>
 
 			<% end %>
-			<div class="well">
+			<div class="well" style="overflow: hidden">
+        <legend>New</legend>
 				<%= form_for @room.conference.event_types.create!, url: add_event_type_room_path(@room), validate: true do |f| %>
-					<%= f.text_field :name, style: 'text-align: left; width: 75%' %><br/>
-					<%= f.text_field :length, style: 'text-align: left; width: 75%' %><br/>
-					<%= f.text_field :warning_time, style: 'text-align: left; width: 75%' %><br/>
-					<%= f.text_field :passing_time, style: 'text-align: left; width: 75%' %><br/>
-					<%= f.submit 'Create', class: 'btn btn-primary btn-sm', style: 'float: right' %>
+					<%= f.text_field :name, placeholder: ' name', style: 'text-align: left; width: 75%' %><br/>
+					<%= f.text_field :length, placeholder: ' length', style: 'text-align: left; width: 75%' %><br/>
+					<%= f.text_field :warning_time, placeholder: ' warning bell', style: 'text-align: left; width: 75%', id: 'warning_time', disabled: true %>
+          <%= f.check_box :warning_time_used, id: 'warning_time_used' %><br/>
+					<%= f.text_field :passing_time, placeholder: ' passing bell', style: 'text-align: left; width: 75%', id: 'passing_time', disabled: true %>
+          <%= f.check_box :passing_time_used, id: 'passing_time_used' %><br/><br/>
+					<%= f.submit 'Create', class: 'btn btn-primary', style: 'float: right' %>
 				<% end %>
 		</div>
 		</td>
