--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -22,18 +22,26 @@
 	<tr>
 	  <td style="width: 20%; vertical-align: top">
 			<legend>Event Types</legend>
-			<% @room.conference.event_types.each do |et| %>
-        <div id="et[<%= et.id %>]" data-duration="<%= Time.at(et.length * 60).utc.strftime("%H:%M:%S") %>" class="ui-widget-content ui-draggable ui-draggable-handle" style="border: 1px solid; border-radius: 5px; background-color: rgb(255,255,255); z-index: 100">
-          <b><%= et.name %></b><br/>
-          <%= et.length %> minutes
-          <% if et.warning_time_used %>
-            <br/>warning at <%= et.warning_time %> min.
-          <% end %>
-          <% if et.passing_time_used %>
-            <br/>warning at <%= et.passing_time %> min.
-          <% end %>
-        </div>
-			<% end %>
+			<table>
+				<% @room.conference.event_types.each do |et| %>
+						<tr>
+							<td style="width: 80%">
+			          <b><%= et.name %></b><br/>
+			          <%= et.length %> minutes
+			          <% if et.warning_time_used %>
+			            <br/>warning at <%= et.warning_time %> min.
+			          <% end %>
+			          <% if et.passing_time_used %>
+			            <br/>warning at <%= et.passing_time %> min.
+			          <% end %>
+							</td>
+							<td style="width: 20%">
+								<div id="et[<%= et.id %>]" data-duration="<%= Time.at(et.length * 60).utc.strftime("%H:%M:%S") %>" class="ui-widget-content ui-draggable ui-draggable-handle" style="width: 32px; height: 32px; border-radius: 16px; background: aliceblue; z-index: 100"/>
+							</td>
+						</tr>
+				<% end %>
+			</table>
+			<br/>
 			<div class="well" style="overflow: hidden">
         <legend>New</legend>
 				<%= form_for @room.conference.event_types.new, url: add_event_type_room_path(@room), validate: true do |f| %>
