--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -4,6 +4,17 @@
 	<%= javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.js' %>
 	<%= stylesheet_link_tag '//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css' %>
 	<%= stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.7.1/fullcalendar.min.css' %>
+	<style>
+		.fc-time-grid .fc-slats td {
+	    height: 7em;
+		}
+		.fc-view
+		 {
+		   /* prevents dragging outside of widget */
+		   width: 100%;
+		   overflow: visible;
+		 }
+	</style>
 <% end %>
 
 <%= link_to 'Back to Conference Manager', @room.conference%>
@@ -22,6 +33,7 @@
 	<tr>
 	  <td style="width: 20%; vertical-align: top">
 			<legend>Event Types</legend>
+			<p><i>Drag circles onto schedule.</i></p>
 			<table>
 				<% @room.conference.event_types.each do |et| %>
 						<tr>
@@ -36,7 +48,7 @@
 			          <% end %>
 							</td>
 							<td style="width: 20%">
-								<div id="et[<%= et.id %>]" data-duration="<%= Time.at(et.length * 60).utc.strftime("%H:%M:%S") %>" class="ui-widget-content ui-draggable ui-draggable-handle" style="width: 32px; height: 32px; border-radius: 16px; background: aliceblue; z-index: 100"/>
+								<div id="et[<%= et.id %>]" event-type="<%= et.id %>" data-duration="<%= Time.at(et.length * 60).utc.strftime("%H:%M:%S") %>" class="ui-widget-content ui-draggable ui-draggable-handle" style="width: 32px; height: 32px; border-radius: 16px; background: <%= et.color %>; z-index: 100"/>
 							</td>
 						</tr>
 				<% end %>
@@ -53,6 +65,11 @@
           <%= f.check_box :passing_time_used, id: 'passing_time_used' %><br/><br/>
 					<%= f.submit 'Create', class: 'btn btn-primary', style: 'float: right' %>
 				<% end %>
+		</div>
+			<div class="well" id="trash" style="overflow: hidden; height: 200px">
+        <legend>Trash</legend>
+				<i>Drag an event here to delete it.</i>
+			</div>
 		</div>
 		</td>
 		<td style="width: 5%"/>
