--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -63,7 +63,7 @@
 		</div>
 		</td>
 		<td style="width: 5%"/>
-	  <td style="width: 75%">
+	  <td style="width: 75%; vertical-align: top">
 		  <div id="scheduler">
 				<br/>
 		  	<center>If scheduler does not appear, try reloading!</center>
