--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -7,9 +7,9 @@
   </script>
 <% end -%>
 
-<audio id="chime" preload>
-	<source src="japanese-temple-bell.mp3" type="audio/mpeg"/>
-    <source src="japanese-temple-bell.ogg" type="audio/ogg"/>
+<audio id="start-chime" preload>
+	<source src="/japanese-temple-bell.mp3" type="audio/mpeg"/>
+  <source src="/japanese-temple-bell.ogg" type="audio/ogg"/>
 </audio>
 
 <h1>Test</h1>
