--- a/app/views/pages/room.html.erb
+++ b/app/views/pages/room.html.erb
@@ -10,14 +10,14 @@
   <script type="text/javascript">
 		<% now = Time.now %>
 		<% @room.events.each do |e| %>
-			<%= raw(e.chime_js(now)) %>
+			<%= raw(e.chime_js(now)) -%>
 		<% end %>
   </script>
 <% end %>
 
 <audio id="start-chime" preload>
-	<source src="/japanese-temple-bell.mp3" type="audio/mpeg"/>
-  <source src="/japanese-temple-bell.ogg" type="audio/ogg"/>
+	<source src="/ship-bell.mp3" type="audio/mpeg"/>
+  <source src="/ship-bell.ogg" type="audio/ogg"/>
 </audio>
 
 <audio id="warning-chime" preload>
@@ -26,8 +26,8 @@
 </audio>
 
 <audio id="passing-chime" preload>
-	<source src="/ship-bell.mp3" type="audio/mpeg"/>
-  <source src="/ship-bell.ogg" type="audio/ogg"/>
+	<source src="/japanese-temple-bell.mp3" type="audio/mpeg"/>
+  <source src="/japanese-temple-bell.ogg" type="audio/ogg"/>
 </audio>
 
 <h1>Schedule for <%= @room.name %></h1>
