Change warning chime

--- a/app/views/pages/room.html.erb
+++ b/app/views/pages/room.html.erb
@@ -24,8 +24,8 @@
 </audio>
 
 <audio id="warning-chime" preload>
-	<source src="/bike-horn.mp3" type="audio/mpeg"/>
-  <source src="/bike-horn.mp3" type="audio/ogg"/>
+	<source src="/doorbell.mp3" type="audio/mpeg"/>
+  <source src="/doorbell.ogg" type="audio/ogg"/>
 </audio>
 
 <audio id="passing-chime" preload>
