Decrease volume of warning chime. Fixes #8

--- a/app/views/pages/room.html.erb
+++ b/app/views/pages/room.html.erb
@@ -8,6 +8,7 @@
 		}
 	</style>
   <script type="text/javascript">
+    $('#warning-chime').prop('volume', 0.25);
 		$(window).on('beforeunload', function() {
 			return true;
 	  });
