Implement cloning of days #3

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -65,9 +65,13 @@
 		<td style="width: 5%"/>
 	  <td style="width: 75%; vertical-align: top">
 		  <div id="scheduler">
-				<br/>
-		  	<center>If scheduler does not appear, try reloading!</center>
-		  </div>
+      </div>
 	  </td>
 	</tr>
 </table>
+
+<br/>
+<div style="text-align: center">
+	If scheduler does not appear, try reloading!
+</div>
+<br/>
