Add clone warning and move info

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -66,12 +66,9 @@
 	  <td style="width: 75%; vertical-align: top">
 		  <div id="scheduler">
       </div>
+      <i>Warning: Cloning will override existing schedule for a day.</i>
+      <br/>
+    	If scheduler does not appear, try reloading!
 	  </td>
 	</tr>
 </table>
-
-<br/>
-<div style="text-align: center">
-	If scheduler does not appear, try reloading!
-</div>
-<br/>
