--- a/app/views/pages/test.html.erb
+++ b/app/views/pages/test.html.erb
@@ -7,7 +7,7 @@
   </script>
 <% end -%>
 
-<audio id="start-chime" preload>
+<audio id="chime" preload>
 	<source src="/japanese-temple-bell.mp3" type="audio/mpeg"/>
   <source src="/japanese-temple-bell.ogg" type="audio/ogg"/>
 </audio>
