--- a/app/views/pages/room.html.erb
+++ b/app/views/pages/room.html.erb
@@ -19,13 +19,13 @@
 <% end %>
 
 <audio id="start-chime" preload>
-	<source src="/thrush.mp3" type="audio/mpeg"/>
-  <source src="/thrush.ogg" type="audio/ogg"/>
+	<source src="/chickadeedeedee.mp3" type="audio/mpeg"/>
+  <source src="/chickadeedeedee.ogg" type="audio/ogg"/>
 </audio>
 
 <audio id="warning-chime" preload>
-	<source src="/chickadee.mp3" type="audio/mpeg"/>
-  <source src="/chickadee.ogg" type="audio/ogg"/>
+	<source src="/crickets.mp3" type="audio/mpeg"/>
+  <source src="/crickets.ogg" type="audio/ogg"/>
 </audio>
 
 <audio id="passing-chime" preload>
